force-app/main/default/objects/CGD_Order_History__c/CGD_Order_History__c.object-meta.xml
<CustomObject>
    <description>該模組係用以透過API接收星宇SFTP資料交換後，依據邏輯將資料寫入Salesforce，僅作使用者數據預覽，不提供INSERT、UPDATE、DELETE等功能。</description>
    <label>Order History</label>
    <nameField>
        <displayFormat>CGDO-{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>