force-app/main/default/objects/CGD_Order_History__c/fields/All_In_Sales_Revenue_in_USD__c.field-meta.xml
<CustomField>
    <fullName>All_In_Sales_Revenue_in_USD__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For Interline account code only</description>
    <inlineHelpText>For Interline account code only</inlineHelpText>
    <label>All In Sales Revenue in USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>