force-app/main/default/objects/CGD_Order_History__c/fields/All_In_Selling_Rate_in_TWD__c.field-meta.xml
<CustomField>
    <fullName>All_In_Selling_Rate_in_TWD__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For Interline account code only</description>
    <inlineHelpText>For Interline account code only</inlineHelpText>
    <label>All In Selling Rate in TWD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>