force-app/main/default/objects/CGD_Order_History__c/fields/AWB_Count__c.field-meta.xml
<CustomField>
    <fullName>AWB_Count__c</fullName>
    <label>AWB Count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>