force-app/main/default/objects/CGD_Order_History__c/fields/Chargeable_Weight_in_kg__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Weight_in_kg__c</fullName>
    <label>Chargeable Weight in kg</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>