force-app/main/default/objects/CGD_Order_History__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <description>貨品種類</description>
    <inlineHelpText>貨品種類</inlineHelpText>
    <label>Commodity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>