force-app/main/default/objects/CGD_Order_History__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <formula>CASE(
  MOD(
    First_JX_Flight_Date__c + 8/24 - DATE(1900, 1, 7),
    7
  ),
  0, &quot;D7&quot;,  
  1, &quot;D1&quot;,  
  2, &quot;D2&quot;,
  3, &quot;D3&quot;, 
  4, &quot;D4&quot;,  
  5, &quot;D5&quot;,  
  6, &quot;D6&quot;,  
  &quot;Error&quot;
)</formula>
    <label>Day</label>
    <type>Text</type>
</CustomField>