force-app/main/default/objects/CGD_Order_History__c/fields/Departure_Gateway_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Gateway_Airport__c</fullName>
    <description>JX online 起始地</description>
    <inlineHelpText>JX online 起始地</inlineHelpText>
    <label>Departure Gateway - Airport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TPE</fullName>
            </value>
            <value>
                <fullName>MFM</fullName>
            </value>
            <value>
                <fullName>LAX</fullName>
            </value>
            <value>
                <fullName>ONT</fullName>
            </value>
            <value>
                <fullName>SFO</fullName>
            </value>
            <value>
                <fullName>SIN</fullName>
            </value>
            <value>
                <fullName>KIX</fullName>
            </value>
            <value>
                <fullName>NRT</fullName>
            </value>
            <value>
                <fullName>NGO</fullName>
            </value>
            <value>
                <fullName>BKK</fullName>
            </value>
            <value>
                <fullName>HAN</fullName>
            </value>
            <value>
                <fullName>SGN</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>DAD</fullName>
            </value>
            <value>
                <fullName>HKG</fullName>
            </value>
            <value>
                <fullName>KUL</fullName>
            </value>
            <value>
                <fullName>FUK</fullName>
            </value>
            <value>
                <fullName>CGK</fullName>
            </value>
            <value>
                <fullName>CEB</fullName>
            </value>
            <value>
                <fullName>CTS</fullName>
            </value>
            <value>
                <fullName>OKA</fullName>
            </value>
            <value>
                <fullName>MNL</fullName>
            </value>
            <value>
                <fullName>TLS</fullName>
            </value>
            <value>
                <fullName>PEN</fullName>
            </value>
            <value>
                <fullName>CRK</fullName>
            </value>
            <value>
                <fullName>KMJ</fullName>
            </value>
            <value>
                <fullName>KHH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>