force-app/main/default/objects/CGD_Order_History__c/fields/Destination_TC_Area__c.field-meta.xml
<CustomField>
    <fullName>Destination_TC_Area__c</fullName>
    <label>Destination - TC Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CGD_TC_Area</valueSetName>
    </valueSet>
</CustomField>