force-app/main/default/objects/CGD_Order_History__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>外部系統進行資料維護時，需組合後比對該欄位。</description>
    <externalId>true</externalId>
    <inlineHelpText>外部系統進行資料維護時，需組合後比對該欄位。</inlineHelpText>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>