force-app/main/default/objects/CGD_Order_History__c/fields/First_JX_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>First_JX_Flight_Date__c</fullName>
    <label>First JX Flight Date</label>
    <type>Date</type>
</CustomField>