force-app/main/default/objects/CGD_Order_History__c/fields/Ori_All_in_Sales_Revenue_local_currency__c.field-meta.xml
<CustomField>
    <fullName>Ori_All_in_Sales_Revenue_local_currency__c</fullName>
    <label>Ori. All-in Sales Revenue local currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>