force-app/main/default/objects/CGD_Order_History__c/fields/Ori_All_in_Selling_Rate_local_currency__c.field-meta.xml
<CustomField>
    <fullName>Ori_All_in_Selling_Rate_local_currency__c</fullName>
    <label>Ori. All-in Selling Rate local currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>