force-app/main/default/objects/CGD_Order_History__c/fields/Origin_Airport__c.field-meta.xml
<CustomField>
    <fullName>Origin_Airport__c</fullName>
    <description>提單起始地</description>
    <inlineHelpText>提單起始地</inlineHelpText>
    <label>Origin - Airport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TPE</fullName>
            </value>
            <value>
                <fullName>LAX</fullName>
            </value>
            <value>
                <fullName>SFO</fullName>
            </value>
            <value>
                <fullName>SIN</fullName>
            </value>
            <value>
                <fullName>KIX</fullName>
            </value>
            <value>
                <fullName>NRT</fullName>
            </value>
            <value>
                <fullName>NGO</fullName>
            </value>
            <value>
                <fullName>BKK</fullName>
            </value>
            <value>
                <fullName>HAN</fullName>
            </value>
            <value>
                <fullName>SGN</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>DAC</fullName>
            </value>
            <value>
                <fullName>DAD</fullName>
            </value>
            <value>
                <fullName>HKG</fullName>
            </value>
            <value>
                <fullName>KUL</fullName>
            </value>
            <value>
                <fullName>ICN</fullName>
            </value>
            <value>
                <fullName>CGK</fullName>
            </value>
            <value>
                <fullName>PDX</fullName>
            </value>
            <value>
                <fullName>FUK</fullName>
            </value>
            <value>
                <fullName>CEB</fullName>
            </value>
            <value>
                <fullName>CTS</fullName>
            </value>
            <value>
                <fullName>KHH</fullName>
            </value>
            <value>
                <fullName>PNH</fullName>
            </value>
            <value>
                <fullName>PEN</fullName>
            </value>
            <value>
                <fullName>GRU</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>ADD</fullName>
            </value>
            <value>
                <fullName>SOF</fullName>
            </value>
            <value>
                <fullName>OSL</fullName>
            </value>
            <value>
                <fullName>KBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>