force-app/main/default/objects/CGD_Order_History__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Histories (Parent Account)</relationshipLabel>
    <relationshipName>Order_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>