force-app/main/default/objects/CGD_Order_History__c/listViews/Search.listView-meta.xml
<ListView>
    <fullName>Search</fullName>
    <columns>NAME</columns>
    <columns>External_Key__c</columns>
    <columns>Account__c</columns>
    <columns>First_JX_Flight_Date__c</columns>
    <columns>All_In_Sales_Revenue_in_TWD__c</columns>
    <columns>All_In_Sales_Revenue_in_USD__c</columns>
    <columns>All_In_Selling_Rate_in_TWD__c</columns>
    <columns>All_In_Selling_Rate_in_USD__c</columns>
    <columns>Arrival_Gateway_Airport__c</columns>
    <columns>Ori_All_in_Sales_Revenue_in_TWD__c</columns>
    <columns>Ori_All_in_Sales_Revenue_in_USD__c</columns>
    <columns>Ori_All_in_Selling_Rate_in_TWD__c</columns>
    <columns>Ori_All_in_Selling_Rate_in_USD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Search</label>
</ListView>